--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,26 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- Primary Meta Tags -->
+  <title>Sebastian Reinhold - Portfolio</title>
+  <meta name="title" content="Sebastian Reinhold - Portfolio" />
+  <meta name="description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sebastianreinhold.vercel.app/" />
+  <meta property="og:title" content="Sebastian Reinhold - Portfolio" />
+  <meta property="og:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
+  <meta property="og:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://sebastianreinhold.vercel.app/" />
+  <meta property="twitter:title" content="Sebastian Reinhold - Portfolio" />
+  <meta property="twitter:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
+  <meta property="twitter:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.svg" />
+
+  <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
   <app-root></app-root>
