--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,16 @@
   <meta property="og:url" content="https://sebastianreinhold.vercel.app/" />
   <meta property="og:title" content="Sebastian Reinhold - Portfolio" />
   <meta property="og:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
-  <meta property="og:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.svg" />
+  <meta property="og:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.webp" />
+  <meta property="og:image:secure_url" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.webp">
+  <meta property="og:image:type" content="image/jpeg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://sebastianreinhold.vercel.app/" />
   <meta property="twitter:title" content="Sebastian Reinhold - Portfolio" />
   <meta property="twitter:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
-  <meta property="twitter:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.svg" />
+  <meta property="twitter:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.webp" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 </head>
