--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,12 @@
   <meta property="og:url" content="https://sebastianreinhold.vercel.app/" />
   <meta property="og:title" content="Sebastian Reinhold - Portfolio" />
   <meta property="og:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
-  <meta property="og:image" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.jpg" />
+  <meta property="og:image" content="http://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.jpg" />
   <meta property="og:image:secure_url" content="https://sebastianreinhold.vercel.app/assets/sr_with_fade_bg.jpg">
   <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="400" />
+  <meta property="og:image:alt" content="Initials of Sebastian Reinhold as a logo" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
