Finishing touch to meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <title>Sebastian Reinhold - Portfolio</title>
   <meta name="title" content="Sebastian Reinhold - Portfolio" />
   <meta name="description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
+  <meta name="author" content="Sebastian Reinhold" />
+  <meta name="keywords" content="Developer, Angular, Frontend, Web-Developer, Web Developer, CSS, SCSS, HTML, JavaScript, TypeScript, Software Engineer, Software Developer">
+  <meta name="publish_date" content="2024-09-20" /> 
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -17,8 +20,8 @@
   <meta property="og:title" content="Sebastian Reinhold - Portfolio" />
   <meta property="og:description" content="Sebastian Reinhold is a frontend/web developer who builds accessible apps and digital experiences for the web." />
   <meta property="og:image:url" content="http://i.ibb.co/9W0xYrp/sr-with-fade-bg.jpg" />
-  <meta property="og:image:secure_url" content="https://i.ibb.co/9W0xYrp/sr-with-fade-bg.jpg">
-  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:secure_url" content="https://i.ibb.co/9W0xYrp/sr-with-fade-bg.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="600" />
   <meta property="og:image:height" content="600" />
   <meta property="og:image:alt" content="Initials of Sebastian Reinhold as a logo" />
